# Playground

./: README.md  file_sorter.py  index.html  readme copy.md  readme.md
2021/: README.md
2021 :)/: README.md
2021 :)/Banking/: bank.java  (+1 more)
2022/: README.md
AP Physics 1: Video Project/: animate.py  characteristics.py  contents.py  examples.py  interference.py  intro.py  readme.md  type.py  waves.py
APLAC-Book-Project/: readme.md
Art/: README.md
Article Preview/: index.html
Bigger Projects/: README.md
Calculators/: Mean_Var_Std.py  README.md
Certificates/: README.md
Countdown-timer/: script.js
Data Analysis/: COVID-19.ipynb  Cars.ipynb  README.md  Weather.ipynb
Data Visualization/: README.md
FCC Database Submissions/: universe.sql
First 13 months/: readme.md
Frontend Mentor/: README.md
Games/: README.md
Generation/: README.md
JS-Documentation/: index.html
JSDocumentation/: index.html  style.css
Large Projects/: README.md
National Honors Society Club Rush RNG/: readme.md
National Honors Society Site/: references.txt
Personal Websites/: README.md
Physics Exercises/: readme.md
Product-landing-page/: index.html  style.css
Random/: README.md  circle.java  home.js  home.py
Random Projects/: README.md
Random-number-generator/: index.html  script.js
Survey-form/: index.html  style.css  styles.css
The C# Player’s Guide Walkthrough/: readme.md
The-C#-Player’s-Guide-Walkthrough/: LevelThree.cs
Timers/: README.md
Tribute-page/: index.html  style.css
Weird Stuff in Python/DiscordBot-V2/: main.py  pyproject.toml  readme.md
(+510 files in other folders)
