[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Leon Truong"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.0.3"
openai = "^0.25.0"
data = "^0.4"
mozia-modules = "^1.8.3"
discord-ui = "^5.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"